# bitclock

./: .gitignore  Main.hs  Makefile  README.md  binstash.cabal  bitclock.cabal
Bitclock/: Args.hs  Clock.hs  Strip.hs  Web.hs
Data/: LDP8806.hs
conf/DEBIAN/: control
conf/etc/init.d/: bitclock
infrastructure/: .rvmrc  Capfile
infrastructure/manifests/: site.pp
infrastructure/modules/bitclock/manifests/: init.pp  package.pp  service.pp
infrastructure/modules/miscpackages/manifests/: init.pp
infrastructure/modules/networking/files/: interfaces  wpa_supplicant.conf
infrastructure/modules/networking/manifests/: init.pp
infrastructure/modules/system/files/: spi-devices.rules
infrastructure/modules/system/manifests/: init.pp
