name: bitclock
version: 0.0.1
homepage: http://tempo-db.com
synopsis: Bitclock control daemon
description: A daemon to turn a LPD8806 based light strip into a wall clock
license: BSD3
author: Blake Smith
build-type: Simple
cabal-version: >= 1.2

library
  build-depends: base, bytestring, cmdargs, filepath, snap-core, snap-server, time, transformers
  exposed-modules: Bitclock.Clock
  ghc-options: -Wall

executable bitclockd
  main-is: Main.hs
  ghc-options: -Wall
