name: bitclock
version: 0.0.1
homepage: http://tempo-db.com
synopsis: Bitclock control daemon
description: A daemon to turn a LPD8806 based light strip into a wall clock
license: BSD3
author: Blake Smith
build-type: Simple
cabal-version: >= 1.2

library
  build-depends: base, binary, bytestring, cmdargs, filepath, mtl, snap-core, snap-server, time, transformers
  exposed-modules: Bitclock.Args
                   Bitclock.Clock
                   Bitclock.Strip
                   Data.LDP8806
  ghc-options: -Wall

executable bitclockd
  main-is: Main.hs
  ghc-options: -Wall
